Aesthetic corrections, alignement of the vertical lines

--- a/src/app/complex/complex-results/complex-navigator/table-structure/table-header/table-header.component.css
+++ b/src/app/complex/complex-results/complex-navigator/table-structure/table-header/table-header.component.css
@@ -46,6 +46,7 @@ th .txt {
   text-align: center;
   width: 100%;
   height: 100%;
+  color: #e6e6e6;
 }
 
 #CN-table {
