--- a/src/app/complex/complex-results/complex-navigator/table-structure/table-structure.component.css
+++ b/src/app/complex/complex-results/complex-navigator/table-structure/table-structure.component.css
@@ -10,6 +10,7 @@
   top: 0;
   width: 100%;
   z-index: 4;
+  color: #e6e6e6;
 }
 
 .interactors {
